--- a/WonderMoviePlayer/en.lproj/ViewController.xib
+++ b/WonderMoviePlayer/en.lproj/ViewController.xib
@@ -176,7 +176,7 @@
 						<string key="NSFrame">{{85, 62}, {150, 9}}</string>
 						<reference key="NSSuperview" ref="122253373"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="295380555"/>
+						<reference key="NSNextKeyView" ref="368784938"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<float key="IBUIProgress">0.5</float>
@@ -188,7 +188,6 @@
 						<string key="NSFrame">{{53, 431}, {31, 12}}</string>
 						<reference key="NSSuperview" ref="122253373"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<int key="IBUIContentMode">7</int>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="IBUIContentStretch">{{1, 0.5}, {0, 0}}</string>
@@ -232,7 +231,7 @@
 						<string key="NSFrame">{{235, 174}, {65, 60}}</string>
 						<reference key="NSSuperview" ref="122253373"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="368784938"/>
+						<reference key="NSNextKeyView" ref="541719340"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
@@ -253,7 +252,7 @@
 						<string key="NSFrame">{{14, 93}, {70, 44}}</string>
 						<reference key="NSSuperview" ref="122253373"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="541719340"/>
+						<reference key="NSNextKeyView" ref="295380555"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -266,6 +265,19 @@
 						<reference key="IBUINormalTitleShadowColor" ref="1016570727"/>
 						<reference key="IBUIFontDescription" ref="701404163"/>
 						<reference key="IBUIFont" ref="50011559"/>
+					</object>
+					<object class="IBUIView" id="449436498">
+						<reference key="NSNextResponder" ref="122253373"/>
+						<int key="NSvFlags">1316</int>
+						<string key="NSFrame">{{29, 149}, {78, 76}}</string>
+						<reference key="NSSuperview" ref="122253373"/>
+						<reference key="NSWindow"/>
+						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<object class="NSColor" key="IBUIBackgroundColor">
+							<int key="NSColorSpace">3</int>
+							<bytes key="NSWhite">MAA</bytes>
+						</object>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 				</array>
 				<object class="NSPSMatrix" key="NSFrameMatrix"/>
@@ -312,7 +324,6 @@
 						<string key="NSFrameSize">{568, 320}</string>
 						<reference key="NSSuperview" ref="243157986"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<int key="IBUIContentMode">2</int>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -374,6 +385,14 @@
 						<reference key="destination" ref="122253373"/>
 					</object>
 					<string key="id">7</string>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">testView</string>
+						<reference key="source" ref="898633258"/>
+						<reference key="destination" ref="449436498"/>
+					</object>
+					<string key="id">Iin-gK-UDS</string>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
@@ -474,6 +493,7 @@
 							<reference ref="652374835"/>
 							<reference ref="54983306"/>
 							<reference ref="368784938"/>
+							<reference ref="449436498"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -550,6 +570,11 @@
 						<reference key="object" ref="368784938"/>
 						<reference key="parent" ref="122253373"/>
 					</object>
+					<object class="IBObjectRecord">
+						<string key="id">b8v-kC-mMe</string>
+						<reference key="object" ref="449436498"/>
+						<reference key="parent" ref="122253373"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -596,6 +621,7 @@
 				<string key="SxV-hT-pLC.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<reference key="SxV-hT-pLC.IBUserGuides" ref="0"/>
 				<boolean value="NO" key="SxV-hT-pLC.showNotes"/>
+				<string key="b8v-kC-mMe.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="oWr-fD-Zh4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<reference key="oWr-fD-Zh4.IBUserGuides" ref="0"/>
 				<boolean value="NO" key="oWr-fD-Zh4.showNotes"/>
@@ -614,11 +640,19 @@
 					<string key="className">ViewController</string>
 					<string key="superclassName">UIViewController</string>
 					<dictionary class="NSMutableDictionary" key="actions">
+						<string key="changeSlider:">id</string>
 						<string key="onClickPlay:">id</string>
 						<string key="onClickPlayRemote:">id</string>
+						<string key="onClickTable:">id</string>
+						<string key="onClickTest2:">id</string>
 						<string key="onClickWebView:">id</string>
+						<string key="onSliderChanged:">UISlider</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="actionInfosByName">
+						<object class="IBActionInfo" key="changeSlider:">
+							<string key="name">changeSlider:</string>
+							<string key="candidateClassName">id</string>
+						</object>
 						<object class="IBActionInfo" key="onClickPlay:">
 							<string key="name">onClickPlay:</string>
 							<string key="candidateClassName">id</string>
@@ -627,15 +661,28 @@
 							<string key="name">onClickPlayRemote:</string>
 							<string key="candidateClassName">id</string>
 						</object>
+						<object class="IBActionInfo" key="onClickTable:">
+							<string key="name">onClickTable:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="onClickTest2:">
+							<string key="name">onClickTest2:</string>
+							<string key="candidateClassName">id</string>
+						</object>
 						<object class="IBActionInfo" key="onClickWebView:">
 							<string key="name">onClickWebView:</string>
 							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="onSliderChanged:">
+							<string key="name">onSliderChanged:</string>
+							<string key="candidateClassName">UISlider</string>
 						</object>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="loadingIndicator">UIImageView</string>
 						<string key="progressView">UIProgressView</string>
 						<string key="slider">UISlider</string>
+						<string key="testView">UIView</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
 						<object class="IBToOneOutletInfo" key="loadingIndicator">
@@ -649,6 +696,10 @@
 						<object class="IBToOneOutletInfo" key="slider">
 							<string key="name">slider</string>
 							<string key="candidateClassName">UISlider</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="testView">
+							<string key="name">testView</string>
+							<string key="candidateClassName">UIView</string>
 						</object>
 					</dictionary>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
